--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "botgram-explode-game",
+  "name": "explode-game-bot",
   "private": true,
   "version": "0.0.1",
-  "keywords": [ "telegram", "bot", "game", "particle", "explode" ],
+  "keywords": [ "telegram", "bot", "botgram", "game", "particle", "explode" ],
   "description": "Particle Explode Telegram game",
-  "homepage": "https://github.com/jmendeth/node-botgram",
+  "homepage": "https://github.com/botgram/explode-game-bot",
 
   "dependencies": {
+    "botgram": "2",
     "express": "4"
   },
 
   "bugs": {
-    "url": "https://github.com/jmendeth/node-botgram/issues"
+    "url": "https://github.com/botgram/explode-game-bot/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jmendeth/node-botgram"
+    "url": "https://github.com/botgram/explode-game-bot.git"
   },
   "license": "MIT",
 
